--- a/src/container/home/less/styles.less
+++ b/src/container/home/less/styles.less
@@ -15,10 +15,10 @@
 
   .editor-container {
     // width: 100%;
+    position: relative;
     width: 800px;
     height: 500px;
     overflow: auto;
-    transform: translateZ(0);
   }
 
   .editor-svg {
