--- a/src/less/fn.less
+++ b/src/less/fn.less
@@ -23,3 +23,12 @@
   text-indent: 100%;
   white-space: nowrap;
 }
+
+/*
+ * 单行文字溢出时出现省略号，需设定宽度
+ */
+ .text-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
